User specific adaptations. Added wPLI and coherency mapping

--- a/1.2 LFP Event Extraction.ipynb
+++ b/1.2 LFP Event Extraction.ipynb
@@ -231,207 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LFP Recording: SUB-008\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-008\\008_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-008\\008_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 008 : L16-13 channel was not found!\n",
-      "... SUB - 008 : L16-14 channel was not found!\n",
-      "... SUB - 008 : L16-15 channel was not found!\n",
-      "... SUB - 008 : left_16-13 channel was not found!\n",
-      "... SUB - 008 : left_16-14 channel was not found!\n",
-      "... SUB - 008 : left_16-15 channel was not found!\n",
-      "LFP Recording: SUB-009\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-009\\009_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-009\\009_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 009 : R02-01 channel was not found!\n",
-      "... SUB - 009 : R03-01 channel was not found!\n",
-      "... SUB - 009 : R04-01 channel was not found!\n",
-      "... SUB - 009 : R05-02 channel was not found!\n",
-      "... SUB - 009 : R08-05 channel was not found!\n",
-      "... SUB - 009 : right_02-01 channel was not found!\n",
-      "... SUB - 009 : right_03-01 channel was not found!\n",
-      "... SUB - 009 : right_04-01 channel was not found!\n",
-      "... SUB - 009 : right_05-02 channel was not found!\n",
-      "... SUB - 009 : right_08-05 channel was not found!\n",
-      "LFP Recording: SUB-010\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-010\\010_mergedData_v4.0_lfp_right.P\n",
-      "\n",
-      "\t...correct tasks in C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-010\\010_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-010\\010_mergedData_v4.0_lfp_left.P\n",
-      "\n",
-      "\t...correct tasks in C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-010\\010_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 010 : L02-01 channel was not found!\n",
-      "... SUB - 010 : L03-01 channel was not found!\n",
-      "... SUB - 010 : L04-01 channel was not found!\n",
-      "... SUB - 010 : left_02-01 channel was not found!\n",
-      "... SUB - 010 : left_03-01 channel was not found!\n",
-      "... SUB - 010 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-012\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-012\\012_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-012\\012_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 012 : L02-01 channel was not found!\n",
-      "... SUB - 012 : L03-01 channel was not found!\n",
-      "... SUB - 012 : L04-01 channel was not found!\n",
-      "... SUB - 012 : left_02-01 channel was not found!\n",
-      "... SUB - 012 : left_03-01 channel was not found!\n",
-      "... SUB - 012 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-013\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-013\\013_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-013\\013_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 013 : L02-01 channel was not found!\n",
-      "... SUB - 013 : L03-01 channel was not found!\n",
-      "... SUB - 013 : L04-01 channel was not found!\n",
-      "... SUB - 013 : left_02-01 channel was not found!\n",
-      "... SUB - 013 : left_03-01 channel was not found!\n",
-      "... SUB - 013 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-014\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-014\\014_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-014\\014_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 014 : L02-01 channel was not found!\n",
-      "... SUB - 014 : L03-01 channel was not found!\n",
-      "... SUB - 014 : L04-01 channel was not found!\n",
-      "... SUB - 014 : R07-04 channel was not found!\n",
-      "... SUB - 014 : R08-07 channel was not found!\n",
-      "... SUB - 014 : right_07-04 channel was not found!\n",
-      "... SUB - 014 : right_08-07 channel was not found!\n",
-      "... SUB - 014 : left_02-01 channel was not found!\n",
-      "... SUB - 014 : left_03-01 channel was not found!\n",
-      "... SUB - 014 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-016\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-016\\016_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-016\\016_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 016 : L02-01 channel was not found!\n",
-      "... SUB - 016 : L03-01 channel was not found!\n",
-      "... SUB - 016 : L04-01 channel was not found!\n",
-      "... SUB - 016 : left_02-01 channel was not found!\n",
-      "... SUB - 016 : left_03-01 channel was not found!\n",
-      "... SUB - 016 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-019\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-019\\019_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-019\\019_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 019 : L02-01 channel was not found!\n",
-      "... SUB - 019 : L03-01 channel was not found!\n",
-      "... SUB - 019 : L04-01 channel was not found!\n",
-      "... SUB - 019 : left_02-01 channel was not found!\n",
-      "... SUB - 019 : left_03-01 channel was not found!\n",
-      "... SUB - 019 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-020\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-020\\020_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-020\\020_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 020 : L02-01 channel was not found!\n",
-      "... SUB - 020 : L03-01 channel was not found!\n",
-      "... SUB - 020 : L04-01 channel was not found!\n",
-      "... SUB - 020 : left_02-01 channel was not found!\n",
-      "... SUB - 020 : left_03-01 channel was not found!\n",
-      "... SUB - 020 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-021\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-021\\021_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-021\\021_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 021 : L02-01 channel was not found!\n",
-      "... SUB - 021 : L03-01 channel was not found!\n",
-      "... SUB - 021 : L04-01 channel was not found!\n",
-      "... SUB - 021 : left_02-01 channel was not found!\n",
-      "... SUB - 021 : left_03-01 channel was not found!\n",
-      "... SUB - 021 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-022\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-022\\022_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-022\\022_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 022 : L02-01 channel was not found!\n",
-      "... SUB - 022 : L03-01 channel was not found!\n",
-      "... SUB - 022 : L04-01 channel was not found!\n",
-      "... SUB - 022 : left_02-01 channel was not found!\n",
-      "... SUB - 022 : left_03-01 channel was not found!\n",
-      "... SUB - 022 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-023\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-023\\023_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-023\\023_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 023 : L02-01 channel was not found!\n",
-      "... SUB - 023 : L03-01 channel was not found!\n",
-      "... SUB - 023 : L04-01 channel was not found!\n",
-      "... SUB - 023 : left_02-01 channel was not found!\n",
-      "... SUB - 023 : left_03-01 channel was not found!\n",
-      "... SUB - 023 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-101\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-101\\101_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-101\\101_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 101 : L02-01 channel was not found!\n",
-      "... SUB - 101 : L03-01 channel was not found!\n",
-      "... SUB - 101 : L04-01 channel was not found!\n",
-      "... SUB - 101 : left_02-01 channel was not found!\n",
-      "... SUB - 101 : left_03-01 channel was not found!\n",
-      "... SUB - 101 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-102\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-102\\102_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-102\\102_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 102 : L02-01 channel was not found!\n",
-      "... SUB - 102 : L03-01 channel was not found!\n",
-      "... SUB - 102 : L04-01 channel was not found!\n",
-      "... SUB - 102 : left_02-01 channel was not found!\n",
-      "... SUB - 102 : left_03-01 channel was not found!\n",
-      "... SUB - 102 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-103\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-103\\103_mergedData_v4.0_lfp_right.P\n",
-      "corrected times while loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-103\\103_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-103\\103_mergedData_v4.0_lfp_left.P\n",
-      "corrected times while loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-103\\103_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 103 : L02-01 channel was not found!\n",
-      "... SUB - 103 : L03-01 channel was not found!\n",
-      "... SUB - 103 : L04-01 channel was not found!\n",
-      "... SUB - 103 : left_02-01 channel was not found!\n",
-      "... SUB - 103 : left_03-01 channel was not found!\n",
-      "... SUB - 103 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-105\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-105\\105_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-105\\105_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 105 : L02-01 channel was not found!\n",
-      "... SUB - 105 : L03-01 channel was not found!\n",
-      "... SUB - 105 : L04-01 channel was not found!\n",
-      "... SUB - 105 : left_02-01 channel was not found!\n",
-      "... SUB - 105 : left_03-01 channel was not found!\n",
-      "... SUB - 105 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-107\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-107\\107_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-107\\107_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 107 : R02-01 channel was not found!\n",
-      "... SUB - 107 : R03-01 channel was not found!\n",
-      "... SUB - 107 : R04-01 channel was not found!\n",
-      "... SUB - 107 : right_02-01 channel was not found!\n",
-      "... SUB - 107 : right_03-01 channel was not found!\n",
-      "... SUB - 107 : right_04-01 channel was not found!\n",
-      "LFP Recording: SUB-108\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-108\\108_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-108\\108_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 108 : L02-01 channel was not found!\n",
-      "... SUB - 108 : L03-01 channel was not found!\n",
-      "... SUB - 108 : L04-01 channel was not found!\n",
-      "... SUB - 108 : left_02-01 channel was not found!\n",
-      "... SUB - 108 : left_03-01 channel was not found!\n",
-      "... SUB - 108 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-109\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-109\\109_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-109\\109_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 109 : L02-01 channel was not found!\n",
-      "... SUB - 109 : L03-01 channel was not found!\n",
-      "... SUB - 109 : L04-01 channel was not found!\n",
-      "... SUB - 109 : left_02-01 channel was not found!\n",
-      "... SUB - 109 : left_03-01 channel was not found!\n",
-      "... SUB - 109 : left_04-01 channel was not found!\n",
-      "LFP Recording: SUB-110\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-110\\110_mergedData_v4.0_lfp_right.P\n",
-      "... pickle loading: C:\\Users\\a.kaymak\\Desktop\\Papers\\2025 Parkinson STN-DBS Dyskinesia LFP-ECG\\files\\data\\sub-110\\110_mergedData_v4.0_lfp_left.P\n",
-      "... SUB - 110 : R02-01 channel was not found!\n",
-      "... SUB - 110 : R03-01 channel was not found!\n",
-      "... SUB - 110 : R04-01 channel was not found!\n",
-      "... SUB - 110 : right_02-01 channel was not found!\n",
-      "... SUB - 110 : right_03-01 channel was not found!\n",
-      "... SUB - 110 : right_04-01 channel was not found!\n"
+     "ename": "NameError",
+     "evalue": "name 'SUB_LIST' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m SUB \u001b[38;5;129;01min\u001b[39;00m \u001b[43mSUB_LIST\u001b[49m:  \n\u001b[32m      3\u001b[39m     LFP_SUB      = LFP(PATH, SUB)\n\u001b[32m      4\u001b[39m     LFP_baseline = LFP_SUB.get_baseline_recording(t_min=\u001b[32m0\u001b[39m, t_max=\u001b[32m5\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'SUB_LIST' is not defined"
      ]
     }
    ],
@@ -449,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro",
    "language": "python",
    "name": "python3"
   },
@@ -463,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
