--- a/1.1 Event Detection.ipynb
+++ b/1.1 Event Detection.ipynb
@@ -363,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro",
    "language": "python",
    "name": "python3"
   },
@@ -377,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
