--- a/1.4 LFP Channel STN Segmentation.ipynb
+++ b/1.4 LFP Channel STN Segmentation.ipynb
@@ -261,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
