Cleaning up. Modifying plotting utils

--- a/5.2 wPLI STN-ECoG.ipynb
+++ b/5.2 wPLI STN-ECoG.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "import pickle\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "47e119d6",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,10 @@
     "# Given the event starting times, split the noLID dataframe into a medOff and medOn dataframe \n",
     "# as defined by events that occur before or after 30 minutes after medication intake.\n",
     "EVENTS_LFP_MOTOR_noLID_medOff = EVENTS_LFP_MOTOR_noLID[EVENTS_LFP_MOTOR_noLID.event_start_time <= 30]\n",
-    "EVENTS_LFP_MOTOR_noLID_medOn  = EVENTS_LFP_MOTOR_noLID[EVENTS_LFP_MOTOR_noLID.event_start_time > 30]"
+    "EVENTS_LFP_MOTOR_noLID_medOn  = EVENTS_LFP_MOTOR_noLID[EVENTS_LFP_MOTOR_noLID.event_start_time > 30]\n",
+    "\n",
+    "# Delete large variables that are not used to save memory\n",
+    "del EVENTS_ECOG, EVENTS_LFP, EVENTS_ECOG_noLID, EVENTS_LFP_MOTOR_noLID"
    ]
   },
   {
@@ -93,25 +96,19 @@
    "outputs": [],
    "source": [
     "# ------- No LID med off (i.e., <= 30 min) pre-event recording -------\n",
-    "# Compute pre-event wPLI and PSI\n",
-    "noLID_medOff_preEventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_noLID_medOff, EVENTS_ECOG_noLID_medOff, condition=\"pre_event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(noLID_medOff_preEventResults, \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOff_preEvent\")\n",
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOff_preEvent\"\n",
+    "noLID_medOff_preEventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_noLID_medOff, dataset_ECOG=EVENTS_ECOG_noLID_medOff, filename=filename,\n",
+    "                                             condition=\"pre_event_recording\", fs=fs, n_perm=1000)\n",
     "\n",
     "# ------- No LID med on (i.e., > 30 min) pre-event recording -------\n",
-    "# Compute pre-event wPLI and PSI\n",
-    "noLID_medOn_preEventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_noLID_medOn, EVENTS_ECOG_noLID_medOn, condition=\"pre_event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(noLID_medOn_preEventResults, \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOn_preEvent\")\n",
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOn_preEvent\"\n",
+    "noLID_medOn_preEventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_noLID_medOn, dataset_ECOG=EVENTS_ECOG_noLID_medOn, filename=filename,\n",
+    "                                             condition=\"pre_event_recording\", fs=fs, n_perm=1000)\n",
     "\n",
     "# ------- LID pre-event recording -------\n",
-    "# Compute pre-event wPLI and PSI\n",
-    "LID_preEventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_LID, EVENTS_ECOG_LID, condition=\"pre_event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(LID_preEventResults, \"STN_MOTOR_vs_Cortex_wPLI_LID_preEvent\")\n"
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_LID_preEvent\"\n",
+    "LID_preEventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_LID, dataset_ECOG=EVENTS_ECOG_LID, filename=filename, \n",
+    "                                             condition=\"pre_event_recording\", fs=fs, n_perm=1000)\n"
    ]
   },
   {
@@ -130,25 +127,19 @@
    "outputs": [],
    "source": [
     "# ------- No LID med off (i.e., <= 30 min) event recording -------\n",
-    "# Compute event wPLI and PSI\n",
-    "noLID_medOff_eventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_noLID_medOff, EVENTS_ECOG_noLID_medOff, condition=\"event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(noLID_medOff_eventResults, \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOff_event\")\n",
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOff_event\"\n",
+    "noLID_medOff_eventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_noLID_medOff, dataset_ECOG=EVENTS_ECOG_noLID_medOff, filename=filename, \n",
+    "                                         condition=\"event_recording\", fs=fs, n_perm=1000)\n",
     "\n",
     "# ------- No LID med on (i.e., > 30 min) event recording -------\n",
-    "# Compute event wPLI and PSI\n",
-    "noLID_medOn_eventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_noLID_medOn, EVENTS_ECOG_noLID_medOn, condition=\"event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(noLID_medOn_eventResults, \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOn_event\")\n",
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOn_event\"\n",
+    "noLID_medOn_eventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_noLID_medOn, dataset_ECOG=EVENTS_ECOG_noLID_medOn, filename=filename, \n",
+    "                                         condition=\"event_recording\", fs=fs, n_perm=1000)\n",
     "\n",
     "# ------- LID event recording -------\n",
-    "# Compute event wPLI and PSI\n",
-    "LID_eventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_LID, EVENTS_ECOG_LID, condition=\"event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(LID_eventResults, \"STN_MOTOR_vs_Cortex_wPLI_LID_event\")\n"
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_LID_event\"\n",
+    "LID_eventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_LID, dataset_ECOG=EVENTS_ECOG_LID, filename=filename, \n",
+    "                                         condition=\"event_recording\", fs=fs, n_perm=1000)\n"
    ]
   },
   {
@@ -167,25 +158,19 @@
    "outputs": [],
    "source": [
     "# ------- No LID med off (i.e., <= 30 min) post-event recording -------\n",
-    "# Compute post-event wPLI and PSI\n",
-    "noLID_medOff_postEventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_noLID_medOff, EVENTS_ECOG_noLID_medOff, condition=\"post_event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(noLID_medOff_postEventResults, \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOff_postEvent\")\n",
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOff_postEvent\"\n",
+    "noLID_medOff_postEventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_noLID_medOff, dataset_ECOG=EVENTS_ECOG_noLID_medOff, filename=filename,\n",
+    "                                             condition=\"post_event_recording\", fs=fs, n_perm=1000)\n",
     "\n",
     "# ------- No LID med on (i.e., > 30 min) post-event recording -------\n",
-    "# Compute post-event wPLI and PSI\n",
-    "noLID_medOn_postEventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_noLID_medOn, EVENTS_ECOG_noLID_medOn, condition=\"post_event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(noLID_medOn_postEventResults, \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOn_postEvent\")\n",
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_noLID_medOn_postEvent\"\n",
+    "noLID_medOn_postEventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_noLID_medOn, dataset_ECOG=EVENTS_ECOG_noLID_medOn, filename=filename,\n",
+    "                                             condition=\"post_event_recording\", fs=fs, n_perm=1000)\n",
     "\n",
     "# ------- LID post-event recording -------\n",
-    "# Compute post-event wPLI and PSI\n",
-    "LID_postEventResults = get_wPLI_psi(EVENTS_LFP_MOTOR_LID, EVENTS_ECOG_LID, condition=\"post_event_recording\", fs=fs, n_perm=1000)\n",
-    "\n",
-    "# Save results\n",
-    "utils_io.save_wPLI_df(LID_postEventResults, \"STN_MOTOR_vs_Cortex_wPLI_LID_postEvent\")\n"
+    "filename = \"STN_MOTOR_vs_Cortex_wPLI_LID_postEvent\"\n",
+    "LID_postEventResults = get_wPLI_psi(dataset_LFP=EVENTS_LFP_MOTOR_LID, dataset_ECOG=EVENTS_ECOG_LID, filename=filename,\n",
+    "                                             condition=\"post_event_recording\", fs=fs, n_perm=1000)\n"
    ]
   },
   {
@@ -283,6 +268,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce6cbe41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot pre-events LID results \n",
+    "df = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_wPLI_LID_preEvent.pkl\")\n",
+    "filename = \"wPLI_LID_preEvent\"\n",
+    "# Loop through all frequency bands\n",
+    "# for band in ['theta', 'alpha', 'beta_low', 'beta_high', 'gamma', 'gamma_III']:\n",
+    "for band in ['beta_low', 'beta_high']:\n",
+    "    plot_wPLI_on_cortex(df, filename=filename, frequencyBand=band, onlyOneHemisphere=True, safeFile=True, \n",
+    "                        fixedCmap=np.arange(-0.05, 0.151, 0.05))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b11f7145",
    "metadata": {},
@@ -298,8 +300,13 @@
    "outputs": [],
    "source": [
     "# Plot during events LID results \n",
-    "df = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_wPLI_LID_Event.pkl\")\n",
-    "plot_wPLI_on_cortex(df, frequencyBand='beta_low', onlyOneHemisphere=True)\n"
+    "df = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_wPLI_LID_event.pkl\")\n",
+    "filename = \"wPLI_LID_event\"\n",
+    "# Loop through all frequency bands\n",
+    "# for band in ['theta', 'alpha', 'beta_low', 'beta_high', 'gamma', 'gamma_III']:\n",
+    "for band in ['beta_low', 'beta_high']:\n",
+    "    plot_wPLI_on_cortex(df, filename=filename, frequencyBand=band, onlyOneHemisphere=True, safeFile=True, \n",
+    "                        fixedCmap=np.arange(-0.05, 0.151, 0.05))\n"
    ]
   },
   {
@@ -319,7 +326,70 @@
    "source": [
     "# Plot post-events LID results \n",
     "df = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_wPLI_LID_postEvent.pkl\")\n",
-    "plot_wPLI_on_cortex(df, frequencyBand='beta_low', onlyOneHemisphere=True)"
+    "filename = \"wPLI_LID_postevent\"\n",
+    "# Loop through all frequency bands\n",
+    "for band in ['theta', 'alpha', 'beta_low', 'beta_high', 'gamma', 'gamma_III']:\n",
+    "    plot_wPLI_on_cortex(df, filename=filename, frequencyBand=band, onlyOneHemisphere=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39ce4eb8",
+   "metadata": {},
+   "source": [
+    "#### 3.4 Plot the changes from pre-event to event phase "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d197e53c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected band: theta\n",
+      "Saving screenshot to ../figures/LFP-ECoG wPLI/wPLI_LID_preEventVSevent_oneHemisphere_theta_-0.10-0.10.png\n",
+      "Selected band: alpha\n",
+      "Saving screenshot to ../figures/LFP-ECoG wPLI/wPLI_LID_preEventVSevent_oneHemisphere_alpha_-0.10-0.10.png\n",
+      "Selected band: beta_low\n",
+      "Saving screenshot to ../figures/LFP-ECoG wPLI/wPLI_LID_preEventVSevent_oneHemisphere_beta_low_-0.10-0.10.png\n",
+      "Selected band: beta_high\n",
+      "Saving screenshot to ../figures/LFP-ECoG wPLI/wPLI_LID_preEventVSevent_oneHemisphere_beta_high_-0.10-0.10.png\n",
+      "Selected band: gamma\n",
+      "Saving screenshot to ../figures/LFP-ECoG wPLI/wPLI_LID_preEventVSevent_oneHemisphere_gamma_-0.10-0.10.png\n",
+      "Selected band: gamma_III\n",
+      "Saving screenshot to ../figures/LFP-ECoG wPLI/wPLI_LID_preEventVSevent_oneHemisphere_gamma_III_-0.10-0.10.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Plot pre vs during events LID results\n",
+    "df_preEvent = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_wPLI_LID_preEvent.pkl\")\n",
+    "df_event = pd.read_pickle(DATA_IO.path_events + \"coherence/STN_MOTOR_vs_Cortex_wPLI_LID_event.pkl\")\n",
+    "\n",
+    "# Check if the same patients and channels are in both dataframes (check for each row)\n",
+    "df_diff = []\n",
+    "for index, row in df_event.iterrows():\n",
+    "    # find the matching patient and channel in df_preEvent\n",
+    "    df_preEvent_row = df_preEvent[(df_preEvent[\"patient\"] == row[\"patient\"]) & (df_preEvent[\"ECoG_channel\"] == row[\"ECoG_channel\"]) & (df_preEvent[\"LFP_channel\"] == row[\"LFP_channel\"])]\n",
+    "    if not df_preEvent_row.empty:\n",
+    "        df_diff.append({\n",
+    "            \"patient\": row[\"patient\"],\n",
+    "            \"ECoG_channel\": row[\"ECoG_channel\"],\n",
+    "            \"freqs\": row[\"freqs\"],\n",
+    "            \"wpli\": row[\"wpli\"] - df_preEvent_row.iloc[0][\"wpli\"],\n",
+    "            \"psi\": row[\"psi\"] - df_preEvent_row.iloc[0][\"psi\"]\n",
+    "        })\n",
+    "df_diff = pd.DataFrame(df_diff)\n",
+    "\n",
+    "filename = \"wPLI_LID_preEventVSevent\"\n",
+    "# Loop through all frequency bands\n",
+    "for band in ['theta', 'alpha', 'beta_low', 'beta_high', 'gamma', 'gamma_III']:\n",
+    "    plot_wPLI_on_cortex(df_diff, filename=filename, frequencyBand=band, onlyOneHemisphere=True, \n",
+    "                        cmap=\"bwr\", fixedCmap=np.arange(-0.1, 0.11, 0.05))"
    ]
   }
  ],
